# pdftool

./: README.md  pyproject.toml
src/pdftool/: main.py
