[project]
name = "pdftool"
version = "0.1.0"
description = "PDF command-line tools using PyMuPDF."
readme = "README.md"
authors = [
    { name = "ryuryu-ymj", email = "33318253+ryuryu-ymj@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "pymupdf>=1.25.2",
]

[project.scripts]
pdftool = "pdftool.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
